# typing_test

./: Cargo.toml  README.md
src/: line.rs  main.rs  quote.rs  words.txt
