[package]
name = "typing_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.25"
crossterm = "0.22.1"
rand = "0.8.5"
reqwest = { version = "0.11.11", features = [ "blocking", "json" ] }
serde = { version = "1.0.139", features = [ "derive" ] }
